--- a/app/globals.css
+++ b/app/globals.css
@@ -1,14 +1,121 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+
+@theme {
+  --font-family-sans: "Inter", sans-serif;
+}
 
 :root {
-  --background: #1a1a1a;
-  --foreground: #eaeaea;
+  --sh-class: #7aa2f7;
+  --sh-sign: #89ddff;
+  --sh-string: #9ece6a;
+  --sh-keyword: #bb9af7;
+  --sh-comment: #565f89;
+  --sh-jsxliterals: #7aa2f7;
+  --sh-property: #73daca;
+  --sh-entity: #e0af68;
+  --bg: #1a1a1a;
+  --text-copy: #eaeaea;
+}
+
+html {
+  min-width: 360px;
+  scrollbar-gutter: stable;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+  text-rendering: optimizeLegibility;
+  background-color: var(--bg);
+  max-width: 650px;
+  color: var(--text-copy);
+  margin: 0 auto;
   padding: 4rem 2rem;
+  line-height: 1.5;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  text-wrap: balance;
+}
+
+pre {
+  background-color: #16161e;
+  border-radius: 0.5rem;
+  overflow-x: auto;
+  padding: 1rem;
+  margin: 1.5rem 0;
+  line-height: 1;
+}
+
+pre::-webkit-scrollbar {
+  display: none;
+}
+
+pre {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+code {
+  font-family: "Menlo", "Monaco", "Courier New", monospace;
+  font-size: 14px;
+  padding: 0.2em 0.4em;
+  border-radius: 0.3em;
+  background-color: var(--color-gray-100);
+}
+
+pre code {
+  background-color: transparent;
+  padding: 0;
+  border: none;
+  font-size: 14px;
+  line-height: 1.5;
+}
+
+pre code > span .sh__token--identifier {
+  color: white !important;
+}
+
+code:not(pre code) span {
+  font-weight: 500;
+  color: black !important;
+}
+
+@media (prefers-color-scheme: dark) {
+  code {
+    font-family: "Menlo", "Monaco", "Courier New", monospace;
+    font-size: 14px;
+    padding: 0.2em 0.4em;
+    border-radius: 0.3em;
+    background-color: var(--color-zinc-800);
+  }
+
+  code:not(pre code) span {
+    color: var(--color-zinc-100) !important;
+  }
+}
+
+pre code span {
+  font-weight: 500;
+}
+
+hr {
+  color: var(--color-gray-200);
+}
+
+/* Remove Safari input shadow on mobile */
+input[type="text"],
+input[type="email"] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+table {
+  display: block;
+  max-width: fit-content;
+  overflow-x: auto;
+  white-space: nowrap;
+  text-align: left;
 }
